<resources>
    <string name="app_name">NFC App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logging">LoggingActivity</string>
    <string name="title_activity_nfc_emulator">Nfc Emulator</string>

    <string name="login_button">Login</string>

    <string name="reader_menu">Reader</string>
    <string name="emulator_menu">Emulator</string>
    <string name="menu_logout">Logout</string>

    <string name="login_user">Username:</string>
    <string name="login_pass">Password:</string>
    <string name="login_title">Login</string>
    <string name="login_hint_user">username</string>
    <string name="login_hint_pass">password</string>

    <string name="status_title">Status</string>
    <string name="status_mode">just started</string>
    <string name="status_current_mode">Current Mode:</string>

    <string name="dialog_reader_message1">Waiting for a Tag.</string>
    <string name="dialog_reader_message2">Waiting for a Tag..</string>
    <string name="dialog_reader_message3">Waiting for a Tag&#8230;</string>
    <string name="dialog_reader_title">Reader Mode</string>
</resources>
