<!--TODO: Design Suggestions-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.test.nfctests.NfcEmulator">

    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="32dp"
        android:text="@string/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:text="@string/status_current_mode"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:text="@string/status_mode"
        android:id="@+id/status_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
