<!-- TODO: Design Suggestions -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_user"
            android:hint="@string/login_hint_user"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_pass"
            android:hint="@string/login_hint_pass"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button"
        android:onClick="login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99ccff"
        android:textColor="#fff"
        android:textStyle="bold"
        android:fontFamily="Arial"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/login_notification"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#ff0000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
